istio/istio/fault_injection/players-error-code-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bets-vs
spec:
  hosts:
    - bets
    - <YOUR-NAME-HERE>.sensedia.com
  gateways:
    - bets-gateway
  http:
    - fault:
        abort:
          httpStatus: 500
          percentage:
            value: 100
      match:
        - headers:
            x-http-response:
              exact: "500"
      route:
        - destination:
            host: bets
            subset: v1
    - match:
        - uri:
            prefix: /api/bets
      route:
        - destination:
            host: bets
            port:
              number: 9999
            subset: v1
          weight: 100
